## Process this file with automake to produce Makefile.in -*- automake -*-

noinst_LISP = u2-cache.el u2-compile.el u2-dired.el u2-help.el u2-load.el u2-piclan.el u2-proc-mode.el u2ver.el unibasic.el unidata.el

# TODO dependency u2-modever.texi.in -> u2-modever.texi

BUILT_SOURCES = u2-modever.texi

info_TEXINFOS = u2-modeinst.texi u2-mode.texi u2-modever.texi


u2-modever.texi: u2-modever.texi.in
	sed -e 's/@